IKASAN-2790 sorting for JDK 17